--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app">Hello Vue2</div>
-    
+    <div id="app">Hello Qin</div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
